<?xml version="1.0"?>
<package format="3">
  <name>ground_robot_sim</name>
  <version>0.1.0</version>
  <description>Dependency-light ROS 2 ground robot simulation samples for diff-drive, lidar stop, and multi-robot namespaces.</description>
  <maintainer email="maintainer@example.com">ROS 2 Sample Maintainers</maintainer>
  <license>MIT</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend condition="$ROS_DISTRO != foxy">ros_gz_bridge</exec_depend>
  <exec_depend condition="$ROS_DISTRO != foxy">ros_gz_sim</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>sample_interfaces</depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
