<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openusd_bridge</name>
  <version>0.1.0</version>
  <description>Record ROS 2 odometry as time-sampled OpenUSD transforms.</description>
  <maintainer email="dev@example.com">ROS 2 Sample Maintainers</maintainer>
  <license>MIT</license>

  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <exec_depend>ground_robot_sim</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
